--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.16",
     "express": "^4.17.1",
-    "morgan": "^1.9.1"
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
+    "morgan": "^1.9.1",
+    "vue-apollo": "^3.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
